--- a/styles/style.css
+++ b/styles/style.css
@@ -8,24 +8,365 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-
+/* ниже написаны стили для шапки сайта */
 .header {
   height: 100vh;
+  display: flex;
+  position: relative;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__logo {
+  width: 183px;
+  height: 32px;
+  display: flex;
+  position: relative;
+}
+
+.header__logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__title {
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  display: flex;
+  /* ниже написано расположение заголовка */
+  align-items: center;
+  margin-left: 64px;
+  z-index: 2;
+}
+
+.header__subtitle {
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  display: flex;
+  /* ниже написано расположение подзаголовка */
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  display: flex;
+  /* ниже написано расположение картинки */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  display: flex;
+  /* ниже написано расположение фона */
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/* ниже написаны стили для блока description */
+.description {
+  min-height: 425px;
+  max-height: 650px;
+}
+
+.two-columns {
+  width: 80%;
+  padding-top: 0;
+  margin-top: 100px;
+  margin-bottom: 0;
+  /* ниже написано расположение элементов между собой */
+  flex-direction: row;
+  justify-content: space-between;
+  display: flex;
+  margin: auto;
+}
+
+/* стили для первой колонки */
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+/* стили для второй колонки */
+.two-columns__main-text {
+  align-content: 30px;
+  width: 80%;
+  margin-bottom: 0;
+}
+
+.two-columns__paragraph {
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+/* ниже написаны стили для блока с таблицой "Цифры и факты" */
+.digits {
+  margin-bottom: 100px;
+}
+
+.section-title {
+  display: flex;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin-top: 100px;
+  margin-bottom: 0;
+}
+
+.section-subtitle {
+  display: flex;
+  justify-content: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-top: 20px;
+}
+ /* здесь стиль для подзаголовка таблицы "Цифры и факты" */
+.section-subtitle_theme_white {
+  margin-bottom: 60px;
+}
+
+.table {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  width: 1100px;
+  flex-wrap: wrap;
+}
+
+/* здесь написан стиль для таблицы "Цифры и факты" */
+.table_theme_white {
+  width: 250px;
+}
+
+.table__ctll {
+  width: 250px;
+  flex-direction: row;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+}
+
+/* ниже написаны стили для блока с Фейнманом */
+.feinman {
+  height: 890px;
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* здесь стили заголовка и подзаголова в одном блоке */
+.feinman__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+}
+
+.feinman__title {
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 0;
+  padding-top: 100px;
+}
+
+.feinman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin-top: 70px;
+}
+
+.feinman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.feinman__photo {
+  width: 867px;
+  height: 637px;
+  display: flex;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+/* ниже написаны стили для блока с таблицой "Принципы обучения" */
+.kaufman {
+  background-color: #1f1f1f;
+  overflow: hidden;
+  flex-direction: column;
+  display: flex;
+  position: relative;
+  padding-bottom: 90px;
+}
+
+/* основные стили таблицы написаны в блоке digits */
+/* здесь написаны только модификаторы */
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.kaufman__tringle {
+  display: flex;
+  position: absolute;
+  right: -210px;
+}
+
+.table_theme_dark {
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  color: white;
+  width: 200px;
+}
+
+.table__text_theme_dark {
+  color: white;
+  width: 200px;
+}
+
+/* ниже написаны стили для подвала сайта */
+.footer {
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #1f1f1f;
+  min-height: 300px;
+}
+
+.footer__columns {
+  flex-direction: row;
+  justify-content: space-between;
+  display: flex;
+  position: relative;
+  margin: auto;
+  width: 90%;
+  min-height: 300px;
+}
+
+/* стили первой колонки подвала */
+.footer__columns_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author {
+ padding-top: 18px;
+ padding-bottom: 18px;
+ line-height: 25px;
+ font-size: 18px;
+ font-weight: normal;
+ color: white;
+ display: flex;
+ position: absolute;
+ bottom: 0;
+ margin-bottom: 0;
+}
+
+/* стили второй третьей колонки подвала */
+.footer__columns_content_info {
+  display: flex;
+  flex-direction: column;
+  width: 154px;
+}
+
+.footer__columns_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: white;
+  margin-top: 0;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+
+.social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
