--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,7 @@
   font-weight: bold;
 }
 
-/* ниже написаны стили для блока с таблицой "Цифры и факты" */
+/* ниже написаны стили для блока с таблицeй "Цифры и факты" */
 .digits {
   margin-bottom: 100px;
 }
@@ -199,7 +199,7 @@
   align-items: center;
 }
 
-/* здесь стили заголовка и подзаголова в одном блоке */
+/* здесь стили заголовка и подзаголовка в одном блоке */
 .feinman__text {
   display: flex;
   flex-direction: column;
@@ -244,7 +244,7 @@
   bottom: 0;
 }
 
-/* ниже написаны стили для блока с таблицой "Принципы обучения" */
+/* ниже написаны стили для блока с таблицeй "Принципы обучения" */
 .kaufman {
   background-color: #1f1f1f;
   overflow: hidden;
