--- a/styles/style.css
+++ b/styles/style.css
@@ -283,6 +283,7 @@
 
 /* ниже написаны стили для подвала сайта */
 .footer {
+  box-sizing: border-box;
   padding-top: 60px;
   padding-bottom: 40px;
   background-color: #1f1f1f;
@@ -304,6 +305,7 @@
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .logo_place_footer {
@@ -318,8 +320,6 @@
  font-size: 18px;
  font-weight: normal;
  color: white;
- display: flex;
- position: relative;
  top: 155px;
  left: 0;
  margin: 0;
