--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
     height: 100vh;
     display: flex;
+    align-items: center;
     position: relative;
     min-height: 600px;
     max-height: 756px;
