--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,6 +1,6 @@
 .video {
-    max-height: 440px;
     margin-top: 100px;
+    margin-bottom: -40px;
     display: flex;
     flex-direction: column;
     align-items: center;
